# cmd/swagger/docs/swagger.json
@@ -131,7 +131,7 @@
                         "SessionCookie": []
                     }
                 ],
-                "description": "创建小组，创建者成为组主与首位成员",
+                "description": "创建小组与创建者自己的玩家档案，创建者成为组主与首位成员",
                 "consumes": [
                     "application/json"
                 ],
@@ -880,10 +880,14 @@
         "dto.CreateGroupReq": {
             "type": "object",
             "required": [
-                "name"
+                "name",
+                "player_name"
             ],
             "properties": {
                 "name": {
+                    "type": "string"
+                },
+                "player_name": {
                     "type": "string"
                 }
             }
